--- a/src/app/order-form/order-form.component.html
+++ b/src/app/order-form/order-form.component.html
@@ -1,3 +1,21 @@
-<p>
-  order-form works!
-</p>
+<div class="container">
+	<h1>Order Form</h1>
+	<form #orderForm="ngForm">
+		<div class="form-group"> 
+			<label for="Buyer name">Name</label>
+			<input type="text" class="form-control" id="name" 
+				required
+				[(ngModel)]="model.FirstName" name="name">
+		</div>
+
+		<div class="form-group">
+			<label for="buyer">Buyer</label>
+			<select class="form-control" id="buyer" required>
+				<option *ngFor="let buyer of buyers" [value]="buyer">{{buyer}}</option>
+			</select>
+		</div>
+
+		<button type="submit" class="btn btn-success">Submit</button>
+
+	</form>
+</div>
