--- a/src/app/order-form/order-form.component.html
+++ b/src/app/order-form/order-form.component.html
@@ -2,18 +2,46 @@
 	<h1>Order Form</h1>
 	<form #orderForm="ngForm">
 		<div class="form-group"> 
-			<label for="Buyer name">Name</label>
+			<label for="firstName"> Buyer Name</label>
 			<input type="text" class="form-control" id="name" 
 				required
-				[(ngModel)]="model.FirstName" name="name">
+				[(ngModel)]="Buyer.FirstName" name="name">
 		</div>
 
-		<div class="form-group">
+		<div class="form-group"> 
+			<label for="firstName">Artist Name</label>
+			<input type="text" class="form-control" id="name" 
+				required
+				[(ngModel)]="Artist.FirstName" name="firstName">
+		</div>
+		<div class="form-group"> 
+			<label for="firstName"> Volunteer Name</label>
+			<input type="text" class="form-control" id="name" 
+				required
+				[(ngModel)]="Volunteer.FirstName" name="firstName">
+		</div>
+
+	<!--	<div class="form-group">
 			<label for="buyer">Buyer</label>
 			<select class="form-control" id="buyer" required>
 				<option *ngFor="let buyer of buyers" [value]="buyer">{{buyer}}</option>
 			</select>
 		</div>
+
+		<div class="form-group">
+			<label for="artist">Artist</label>
+			<select class="form-control" id="artist" required>
+				<option *ngFor="let artist of artists" [value]="artist">{{artist}}</option>
+			</select>
+		</div>
+
+		<div class="form-group">
+			<label for="Volunteer">Artist</label>
+			<select class="form-control" id="volunteer" required>
+				<option *ngFor="let volunteer of volunteers" [value]="volunteer">{{volunteer}}</option>
+			</select>
+		</div>
+		-->
 
 		<button type="submit" class="btn btn-success">Submit</button>
 
