--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,8 @@
 <!-- END NAVBAR -->
 
 <div class="container-fluid">
-  <app-order-form></app-order-form>
+  <app-order-form></app-order-form><br>
+  <app-custom-table [data]="tableForm"></app-custom-table>
 
 </div>
 
