--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- START NAVBAR -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
 <div class="container-fluid">
 <div class="navbar-header">
   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -43,8 +43,9 @@
 <!-- END NAVBAR -->
 
 <div class="container-fluid">
-  <app-order-form></app-order-form><br>
-  <app-custom-table [data]="tableForm"></app-custom-table>
+  <app-signup></app-signup>
+  <!-- <app-order-form></app-order-form><br>
+  <app-custom-table [data]="tableForm"></app-custom-table> -->
 
 </div>
 
