--- a/src/app/custom-table/custom-table.component.html
+++ b/src/app/custom-table/custom-table.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 	<div class="col col-sm-12">	
-		<table class="table table-striped table-hover">
+		<table class="inline-table table table-striped table-hover">
 		  <thead>
 			<tr>
 				<th style="width: 50px;">#</th>
