started order form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,9 +43,9 @@
 <!-- END NAVBAR -->
 
 <div class="container-fluid">
-  <app-signup></app-signup>
-  <!-- <app-order-form></app-order-form><br>
-  <app-custom-table [data]="tableForm"></app-custom-table> -->
+  <!-- <app-signup></app-signup> -->
+  <app-order-form></app-order-form>
+  <!-- <app-custom-table [data]="tableForm"></app-custom-table> -->
 
 </div>
 
