--- a/src/app/order-form/order-form.component.html
+++ b/src/app/order-form/order-form.component.html
@@ -24,7 +24,7 @@
 			  			<div class="form-group">
 						  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
 						</div>
-				  	<table class="table table-striped table-hover ">
+				  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
 					  <thead>
 					    <tr>
 					      <th>ID</th>
@@ -44,7 +44,27 @@
 					</table> 
 				  </div>
 				  <div class="tab-pane fade" id="artist">
-				   
+				  	<div class="form-group">
+						  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
+						</div>
+				  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
+					  <thead>
+					    <tr>
+					      <th>ID</th>
+					      <th>Name</th>
+					      <th>Email</th>
+					      <th>Options</th>
+					    </tr>
+					  </thead>
+					  <tbody>
+					    <tr>
+					      <td>4</td>
+					      <td>Column content</td>
+					      <td>Column content</td>
+					      <td><button class="btn btn-warning">Add</button></td>
+					    </tr>
+					  </tbody>
+					</table> 
 				  </div>
 				  <div class="tab-pane fade" id="dropdown1">
 				   
@@ -55,33 +75,29 @@
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
-
-<div class="panel panel-success">
-	<div class="panel-heading">
-		<h3 class="panel-title">Ticket</h3>
-	</div>
-	<div class="panel-body">
 		<div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-4" style="text-align: center;">
 				<div class="list-group">
 				  <div class="list-group-item">
 				    <h5 class="list-group-item-heading">Order ID</h5>
 				    <p class="list-group-item-text">sd7f8979234</p>
 				  </div>
+				  <div class="btn-group btn-group-justified">
+					<a href="#" class="btn btn-success">Confirm</a>
+					<a href="#" class="btn btn-danger">Remove</a>
+				  </div>
 				</div>
 			</div>
 			<div class="col-sm-4" style="text-align: center;">
-				<div class="panel panel-default">
-					<div class="panel-heading">Buyer ID</div>
-					<div class="panel-body">
-						
-					</div>
-					<div class="btn-group btn-group-justified">
-							<a href="#" class="btn btn-success">Confirm</a>
-							<a href="#" class="btn btn-danger">Remove</a>
-						</div>
+				<div class="list-group">
+				  <div class="list-group-item">
+				    <h5 class="list-group-item-heading">Buyer ID</h5>
+				    <p class="list-group-item-text">sd7f8979234</p>
+				  </div>
+				  <div class="btn-group btn-group-justified">
+					<a href="#" class="btn btn-success">Confirm</a>
+					<a href="#" class="btn btn-danger">Remove</a>
+				  </div>
 				</div>
 			</div>
 			<div class="col-sm-4" style="text-align: center;">
@@ -90,9 +106,40 @@
 				    <h5 class="list-group-item-heading">Artist ID</h5>
 				    <p class="list-group-item-text">sd7f8979234</p>
 				  </div>
+				  <div class="btn-group btn-group-justified">
+					<a href="#" class="btn btn-success">Confirm</a>
+					<a href="#" class="btn btn-danger">Remove</a>
+				  </div>
 				</div>
-				<div class="row">
-					<button class="btn btn-danger">Remove</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h3 class="panel-title">Ticket</h3>
+	</div>
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="list-group">
+				  <div class="list-group-item">
+				    <h5 class="list-group-item-heading">Order</h5>
+				    <h6 class="list-group-item-text">ID:</h6>
+				    <h6 class="list-group-item-text">Special Order:</h6>
+				  </div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="list-group">
+				  <div class="list-group-item">
+				    <h5 class="list-group-item-heading">Buyer</h5>
+				    <h6 class="list-group-item-text">ID:</h6>
+				    <h6 class="list-group-item-text">Address:</h6>
+				    <h6 class="list-group-item-text">Email:</h6>
+				    <h6 class="list-group-item-text">Cell:</h6>
+				  </div>
 				</div>
 			</div>
 		</div>
