updated signup component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
   <ul class="nav navbar-nav">
-  <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+  <li class="active"><a href="#">Signup<span class="sr-only">(current)</span></a></li>
   <li><a href="#">Link</a></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -35,7 +35,7 @@
   <button type="submit" class="btn btn-default">Submit</button>
   </form>
   <ul class="nav navbar-nav navbar-right">
-  <li><a href="#">Link</a></li>
+  <li><a href="#">Login</a></li>
   </ul>
 </div>
 </div>
@@ -43,11 +43,12 @@
 <!-- END NAVBAR -->
 
 <div class="container-fluid">
-  <!-- <app-signup></app-signup> -->
-  <app-order-form></app-order-form>
+  <app-signup></app-signup>
+  <!-- <app-order-form></app-order-form> -->
   <!-- <app-custom-table [data]="tableForm"></app-custom-table> -->
 
 </div>
+
 
 
 
