--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- START NAVBAR -->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
 <div class="container-fluid">
 <div class="navbar-header">
   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -43,7 +43,8 @@
 <!-- END NAVBAR -->
 
 <div class="container-fluid">
-  <app-signup></app-signup>
+  <app-login></app-login>
+  <!-- <app-signup></app-signup> -->
   <!-- <app-order-form></app-order-form> -->
   <!-- <app-custom-table [data]="tableForm"></app-custom-table> -->
 
