--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
 			<div class="panel-body">
 				<div class="form-group">
 				  	<label class="control-label" for="inputUsername">Username</label>
-				  	<input type="text" class="form-control" id="inputUsername" placeholder="Username">
+				  	<input type="text" class="form-control" [(ngModel)]="username" id="inputUsername" placeholder="Username">
 				</div>
 				<div class="form-group">
 				  	<label class="control-label" for="inputUsername">Password</label>
-				  	<input type="text" class="form-control" id="inputUsername" placeholder="Password">
+				  	<input type="text" class="form-control" [(ngModel)]="password" id="inputUsername" placeholder="Password">
 				</div>
 				<div class="row" style="text-align: center;">
 					<div class="col-xs-3"></div>
