--- a/src/app/order-form/order-form.component.html
+++ b/src/app/order-form/order-form.component.html
@@ -76,11 +76,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-4" style="text-align: center;">
+			<div class="col-sm-6" style="text-align: center;">
 				<div class="list-group">
 				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Order ID</h5>
-				    <p class="list-group-item-text">sd7f8979234</p>
+				    <h5 class="list-group-item-heading">Buyer</h5>
+				    <p class="list-group-item-text">ID: sd7f8979234</p>
 				  </div>
 				  <div class="btn-group btn-group-justified">
 					<a href="#" class="btn btn-success">Confirm</a>
@@ -88,23 +88,11 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-sm-4" style="text-align: center;">
+			<div class="col-sm-6" style="text-align: center;">
 				<div class="list-group">
 				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Buyer ID</h5>
-				    <p class="list-group-item-text">sd7f8979234</p>
-				  </div>
-				  <div class="btn-group btn-group-justified">
-					<a href="#" class="btn btn-success">Confirm</a>
-					<a href="#" class="btn btn-danger">Remove</a>
-				  </div>
-				</div>
-			</div>
-			<div class="col-sm-4" style="text-align: center;">
-				<div class="list-group">
-				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Artist ID</h5>
-				    <p class="list-group-item-text">sd7f8979234</p>
+				    <h5 class="list-group-item-heading">Artist</h5>
+				    <p class="list-group-item-text">ID: sd7f8979234</p>
 				  </div>
 				  <div class="btn-group btn-group-justified">
 					<a href="#" class="btn btn-success">Confirm</a>
