--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -52,7 +52,10 @@
 				  <label class="control-label" for="inputDefault">Address</label>
 				  <div class="row">
 				  	<div class="col-sm-12">
-				  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Street">
+				  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Address Line 1">
+				  	</div>
+				  	<div class="col-sm-12">
+				  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Address Line 2">
 				  	</div>
 				  </div>
 				  <div class="row">
