--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,9 +43,10 @@
 <!-- END NAVBAR -->
 
 <div class="container-fluid">
+  <app-admin></app-admin>
   <app-login></app-login>
-  <!-- <app-signup></app-signup> -->
-  <!-- <app-order-form></app-order-form> -->
+  <app-signup></app-signup>
+  <app-order-form></app-order-form>
   <!-- <app-custom-table [data]="tableForm"></app-custom-table> -->
 
 </div>
