--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
 
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
   <ul class="nav navbar-nav">
-  <li class="active"><a href="#">Signup<span class="sr-only">(current)</span></a></li>
-  <li><a href="#">Link</a></li>
+  <li><a routerLink="signup" routerLinkActive="active">Register<span class="sr-only">(current)</span></a></li>
+  <li><a routerLink="orders" routerLinkActive="active">Place Order</a></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
@@ -35,32 +35,19 @@
   <button type="submit" class="btn btn-default">Submit</button>
   </form>
   <ul class="nav navbar-nav navbar-right">
-  <li><a href="#">Login</a></li>
+  <li><a routerLink="login" routerLinkActive="active">Login</a></li>
   </ul>
 </div>
 </div>
 </nav>
 <!-- END NAVBAR -->
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <app-admin></app-admin>
   <app-login></app-login>
   <app-signup></app-signup>
   <app-order-form></app-order-form>
-  <!-- <app-custom-table [data]="tableForm"></app-custom-table> -->
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
+  <app-custom-table [data]="tableForm"></app-custom-table>
+</div> -->
 
 <router-outlet></router-outlet>
