--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,26 @@
-<div class="row">
-	<div class="col-xs-12">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div class="form-group">
-				  	<label class="control-label" for="inputUsername">Username</label>
-				  	<input type="text" class="form-control" [(ngModel)]="username" id="inputUsername" placeholder="Username">
-				</div>
-				<div class="form-group">
-				  	<label class="control-label" for="inputUsername">Password</label>
-				  	<input type="text" class="form-control" [(ngModel)]="password" id="inputUsername" placeholder="Password">
-				</div>
-				<div class="row" style="text-align: center;">
-					<div class="col-xs-3"></div>
-					<div class="col-xs-6">
-						<button class="btn btn-success btn-lg btn-block">Login</button>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<div class="form-group">
+					  	<label class="control-label" for="inputUsername">Username</label>
+					  	<input type="text" class="form-control" [(ngModel)]="username" id="inputUsername" placeholder="Username">
 					</div>
-					<div class="col-xs-3"></div>
+					<div class="form-group">
+					  	<label class="control-label" for="inputUsername">Password</label>
+					  	<input type="text" class="form-control" [(ngModel)]="password" id="inputUsername" placeholder="Password">
+					</div>
+					<div class="row" style="text-align: center;">
+						<div class="col-xs-3"></div>
+						<div class="col-xs-6">
+							<button class="btn btn-success btn-lg btn-block">Login</button>
+						</div>
+						<div class="col-xs-3"></div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
