--- a/src/app/order-form/order-form.component.html
+++ b/src/app/order-form/order-form.component.html
@@ -1,135 +1,137 @@
-<div class="panel panel-primary">
-	<div class="panel-heading">
-		<h3 class="panel-title">Create Order</h3>
-	</div>
-	<div class="panel-body">
-		<div class="row">
-			<div class="col-sm-12">
-				<ul class="nav nav-tabs">
-				  <li class="active"><a href="#buyer" data-toggle="tab" aria-expanded="true">Buyer</a></li>
-				  <li class=""><a href="#artist" data-toggle="tab" aria-expanded="false">Artist</a></li>
-				  <li class="dropdown">
-				    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-				      Options<span class="caret"></span>
-				    </a>
-				    <ul class="dropdown-menu">
-				      <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-				      <li class="divider"></li>
-				      <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
-				    </ul>
-				  </li>
-				</ul>
-				<div id="myTabContent" class="tab-content" style="padding-top: 20px;">
-				  	<div class="tab-pane fade active in" id="buyer">
-			  			<div class="form-group">
-						  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
-						</div>
-				  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
-					  <thead>
-					    <tr>
-					      <th>ID</th>
-					      <th>Name</th>
-					      <th>Email</th>
-					      <th>Options</th>
-					    </tr>
-					  </thead>
-					  <tbody>
-					    <tr>
-					      <td>4</td>
-					      <td>Column content</td>
-					      <td>Column content</td>
-					      <td><button class="btn btn-warning">Add</button></td>
-					    </tr>
-					  </tbody>
-					</table> 
-				  </div>
-				  <div class="tab-pane fade" id="artist">
-				  	<div class="form-group">
-						  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
-						</div>
-				  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
-					  <thead>
-					    <tr>
-					      <th>ID</th>
-					      <th>Name</th>
-					      <th>Email</th>
-					      <th>Options</th>
-					    </tr>
-					  </thead>
-					  <tbody>
-					    <tr>
-					      <td>4</td>
-					      <td>Column content</td>
-					      <td>Column content</td>
-					      <td><button class="btn btn-warning">Add</button></td>
-					    </tr>
-					  </tbody>
-					</table> 
-				  </div>
-				  <div class="tab-pane fade" id="dropdown1">
-				   
-				  </div>
-				  <div class="tab-pane fade" id="dropdown2">
-				   
-				  </div>
+<div class="container-fluid">
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<h3 class="panel-title">Create Order</h3>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div class="col-sm-12">
+					<ul class="nav nav-tabs">
+					  <li class="active"><a href="#buyer" data-toggle="tab" aria-expanded="true">Buyer</a></li>
+					  <li class=""><a href="#artist" data-toggle="tab" aria-expanded="false">Artist</a></li>
+					  <li class="dropdown">
+					    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+					      Options<span class="caret"></span>
+					    </a>
+					    <ul class="dropdown-menu">
+					      <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
+					      <li class="divider"></li>
+					      <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
+					    </ul>
+					  </li>
+					</ul>
+					<div id="myTabContent" class="tab-content" style="padding-top: 20px;">
+					  	<div class="tab-pane fade active in" id="buyer">
+				  			<div class="form-group">
+							  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
+							</div>
+					  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
+						  <thead>
+						    <tr>
+						      <th>ID</th>
+						      <th>Name</th>
+						      <th>Email</th>
+						      <th>Options</th>
+						    </tr>
+						  </thead>
+						  <tbody>
+						    <tr>
+						      <td>4</td>
+						      <td>Column content</td>
+						      <td>Column content</td>
+						      <td><button class="btn btn-warning">Add</button></td>
+						    </tr>
+						  </tbody>
+						</table> 
+					  </div>
+					  <div class="tab-pane fade" id="artist">
+					  	<div class="form-group">
+							  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
+							</div>
+					  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
+						  <thead>
+						    <tr>
+						      <th>ID</th>
+						      <th>Name</th>
+						      <th>Email</th>
+						      <th>Options</th>
+						    </tr>
+						  </thead>
+						  <tbody>
+						    <tr>
+						      <td>4</td>
+						      <td>Column content</td>
+						      <td>Column content</td>
+						      <td><button class="btn btn-warning">Add</button></td>
+						    </tr>
+						  </tbody>
+						</table> 
+					  </div>
+					  <div class="tab-pane fade" id="dropdown1">
+					   
+					  </div>
+					  <div class="tab-pane fade" id="dropdown2">
+					   
+					  </div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6" style="text-align: center;">
+					<div class="list-group">
+					  <div class="list-group-item">
+					    <h5 class="list-group-item-heading">Buyer</h5>
+					    <p class="list-group-item-text">ID: sd7f8979234</p>
+					  </div>
+					  <div class="btn-group btn-group-justified">
+						<a href="#" class="btn btn-success">Confirm</a>
+						<a href="#" class="btn btn-danger">Remove</a>
+					  </div>
+					</div>
+				</div>
+				<div class="col-sm-6" style="text-align: center;">
+					<div class="list-group">
+					  <div class="list-group-item">
+					    <h5 class="list-group-item-heading">Artist</h5>
+					    <p class="list-group-item-text">ID: sd7f8979234</p>
+					  </div>
+					  <div class="btn-group btn-group-justified">
+						<a href="#" class="btn btn-success">Confirm</a>
+						<a href="#" class="btn btn-danger">Remove</a>
+					  </div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-6" style="text-align: center;">
-				<div class="list-group">
-				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Buyer</h5>
-				    <p class="list-group-item-text">ID: sd7f8979234</p>
-				  </div>
-				  <div class="btn-group btn-group-justified">
-					<a href="#" class="btn btn-success">Confirm</a>
-					<a href="#" class="btn btn-danger">Remove</a>
-				  </div>
-				</div>
-			</div>
-			<div class="col-sm-6" style="text-align: center;">
-				<div class="list-group">
-				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Artist</h5>
-				    <p class="list-group-item-text">ID: sd7f8979234</p>
-				  </div>
-				  <div class="btn-group btn-group-justified">
-					<a href="#" class="btn btn-success">Confirm</a>
-					<a href="#" class="btn btn-danger">Remove</a>
-				  </div>
-				</div>
-			</div>
-		</div>
 	</div>
-</div>
 
-<div class="panel panel-primary">
-	<div class="panel-heading">
-		<h3 class="panel-title">Ticket</h3>
-	</div>
-	<div class="panel-body">
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="list-group">
-				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Order</h5>
-				    <h6 class="list-group-item-text">ID:</h6>
-				    <h6 class="list-group-item-text">Special Order:</h6>
-				  </div>
+	<!-- <div class="panel panel-primary">
+		<div class="panel-heading">
+			<h3 class="panel-title">Ticket</h3>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="list-group">
+					  <div class="list-group-item">
+					    <h5 class="list-group-item-heading">Order</h5>
+					    <h6 class="list-group-item-text">ID:</h6>
+					    <h6 class="list-group-item-text">Special Order:</h6>
+					  </div>
+					</div>
 				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="list-group">
-				  <div class="list-group-item">
-				    <h5 class="list-group-item-heading">Buyer</h5>
-				    <h6 class="list-group-item-text">ID:</h6>
-				    <h6 class="list-group-item-text">Address:</h6>
-				    <h6 class="list-group-item-text">Email:</h6>
-				    <h6 class="list-group-item-text">Cell:</h6>
-				  </div>
+				<div class="col-sm-6">
+					<div class="list-group">
+					  <div class="list-group-item">
+					    <h5 class="list-group-item-heading">Buyer</h5>
+					    <h6 class="list-group-item-text">ID:</h6>
+					    <h6 class="list-group-item-text">Address:</h6>
+					    <h6 class="list-group-item-text">Email:</h6>
+					    <h6 class="list-group-item-text">Cell:</h6>
+					  </div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
