--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,14 +5,13 @@
 		</div>
 		<div class="panel-body">
 			<h5 style="text-align: center;">Personal Information</h5>
-			<form [formGroup]="myForm"
-				(ngSubmit)="onSubmit(myForm.value)"
+			<form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm.value)"
 				class="ui form">
 				<div class="row" style="color: #2196f3;">
 					<div class="col-sm-12">
 						<div class="form-group">
 						  <label class="control-label" for="inputFirstName">First Name</label>
-						  <input type="text" class="form-control" [(ngModel)]="newMember.firstName" id="inputFirstName" placeholder="John" [formControl]="myForm.controls['firstName']">
+						  <input type="text" class="form-control" [(ngModel)]="newMember.firstName" id="inputFirstName" placeholder="John" formControlName="firstName">
 						</div>
 					</div>
 				</div>
@@ -20,7 +19,7 @@
 					<div class="col-sm-12">
 						<div class="form-group">
 						  <label class="control-label" for="inputLastName">Last Name</label>
-						  <input type="text" class="form-control" [(ngModel)]="newMember.lastName" id="inputLastName" placeholder="Doe" [formControl]="myForm.controls['lastName']">
+						  <input type="text" class="form-control" [(ngModel)]="newMember.lastName" id="inputLastName" placeholder="Doe" formControlName="lastName">
 						</div>
 					</div>
 				</div>
@@ -30,13 +29,13 @@
 						  <label class="control-label" for="inputDefault">Phone Number</label>
 						  <div class="row">
 						  	<div class="col-xs-4">
-						  		<input type="number" class="form-control" id="inputFirstDigits" maxlength="3" placeholder="(###)" [formControl]="myForm.controls['phoneNumber']">
+						  		<input type="number" class="form-control" id="inputFirstDigits" maxlength="3" placeholder="(###)" formControlName="phoneNumber1">
 						  	</div>
 						  	<div class="col-xs-4">
-						  		<input type="number" class="form-control" id="inputDefault" maxlength="3" placeholder="###" style="text-align: center;" [formControl]="myForm.controls['phoneNumber']">
+						  		<input type="number" class="form-control" id="inputDefault" maxlength="3" placeholder="###" style="text-align: center;" formControlName="phoneNumber2">
 						  	</div>
 						  	<div class="col-xs-4">
-						  		<input type="number" class="form-control" id="inputDefault" maxlength="4" placeholder="####" style="text-align: center;" [formControl]="myForm.controls['phoneNumber']">
+						  		<input type="number" class="form-control" id="inputDefault" maxlength="4" placeholder="####" style="text-align: center;" formControlName="phoneNumber3">
 						  	</div>
 						  </div>
 						</div>
@@ -46,7 +45,7 @@
 					<div class="col-sm-12">
 						<div class="form-group">
 						  <label class="control-label" for="inputDefault">Email</label>
-						  <input type="number" class="form-control" [(ngModel)]="newMember.email" id="inputDefault" placeholder="johndoe@gmail.com" [formControl]="myForm.controls['email']">
+						  <input type="text" class="form-control" [(ngModel)]="newMember.email" id="inputDefault" placeholder="johndoe@gmail.com" formControlName="email">
 						</div>
 					</div>
 				</div>
@@ -56,24 +55,23 @@
 						  <label class="control-label" for="inputDefault">Address</label>
 						  <div class="row">
 						  	<div class="col-sm-12">
-						  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Address Line 1" [formControl]="myForm.controls['street']" >
+						  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Address Line 1"  formControlName="street" required>
 						  	</div>
 						  	<div class="col-sm-12">
-						  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Address Line 2" [formControl]="myForm.controls['street']" >
+						  		<input type="text" class="form-control" [(ngModel)]="newMember.address.street" id="inputDefault" placeholder="Address Line 2">
 						  	</div>
 						  </div>
 						  <div class="row">
 						  	<div class="col-xs-4">
-						  		<input type="text" class="form-control" [(ngModel)]="newMember.address.city" id="inputDefault" placeholder="City" [formControl]="myForm.controls['city']">
+						  		<input type="text" class="form-control" [(ngModel)]="newMember.address.city" id="inputDefault" placeholder="City" formControlName="city">
 						  	</div>
 						  	<div class="col-xs-4">
 						  		<select class="form-control" style="color: #BBBBBB" id="select" [(ngModel)]="newMember.address.state">
-						  			<option value="" disabled="true" >State</option>
 						          <option  *ngFor="let state of states">{{state}}</option>
 						        </select>
 						  	</div>
 						  	<div class="col-xs-4">
-						  		<input type="number" class="form-control" [(ngModel)]="newMember.address.zip" id="inputDefault" placeholder="Zipcode" [formControl]="myForm.controls['zip']" >
+						  		<input type="number" class="form-control" [(ngModel)]="newMember.address.zip" id="inputDefault" placeholder="Zipcode"  formControlName="zip" >
 						  	</div>
 						  </div>
 						</div>
@@ -90,7 +88,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-12">
-						<button class="btn btn-success btn-lg btn-block">Register</button>
+						<button class="btn btn-success btn-lg btn-block" [disabled]="!myForm.valid">Register</button>
 					</div>
 				</div>
 			</form>
