--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,13 @@
-<div class="row">
-	<div class="col-sm-12">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<h5 class="panel-title">Admin Controls</h5>
-			</div>
-			<div class="panel-body">
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-12">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<h5 class="panel-title">Active Users</h5>
+				</div>
+				<div class="panel-body">
 
+				</div>
 			</div>
 		</div>
 	</div>
