--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
   <li><a routerLink="signup" routerLinkActive="active">Register<span class="sr-only">(current)</span></a></li>
   <li><a routerLink="orders" routerLinkActive="active">Place Order</a></li>
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
-    <li><a href="#">Action</a></li>
+    <li><a routerLink="dashboard" routerLinkActive="active">Dashboard</a></li>
     <li><a href="#">Another action</a></li>
     <li><a href="#">Something else here</a></li>
     <li class="divider"></li>
@@ -28,13 +28,8 @@
     </ul>
   </li>
   </ul>
-  <form class="navbar-form navbar-left" role="search">
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-  </form>
   <ul class="nav navbar-nav navbar-right">
+  <li><a routerLink="role" routerLinkActive="active">Role</a></li>
   <li><a routerLink="login" routerLinkActive="active">Login</a></li>
   </ul>
 </div>
