--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,24 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12">
+			<div class="alert alert-dismissible alert-danger" *ngIf="errorLoggingIn">
+			  <button type="button" class="close" data-dismiss="alert">&times;</button>
+			  Your username and password combination do not match any registered users
+			</div>
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<div class="form-group">
 					  	<label class="control-label" for="inputUsername">Username</label>
-					  	<input type="text" class="form-control" [(ngModel)]="username" id="inputUsername" placeholder="Username">
+					  	<input type="text" class="form-control" [(ngModel)]="user.username" id="inputUsername" placeholder="Username">
 					</div>
 					<div class="form-group">
-					  	<label class="control-label" for="inputUsername">Password</label>
-					  	<input type="text" class="form-control" [(ngModel)]="password" id="inputUsername" placeholder="Password">
+					  	<label class="control-label" for="inputPassword">Password</label>
+					  	<input type="password" class="form-control" [(ngModel)]="user.password" id="inputPassword" placeholder="Password">
 					</div>
 					<div class="row" style="text-align: center;">
 						<div class="col-xs-3"></div>
 						<div class="col-xs-6">
-							<button class="btn btn-success btn-lg btn-block">Login</button>
+							<button class="btn btn-success btn-lg btn-block" (click)="login()">Login</button>
 						</div>
 						<div class="col-xs-3"></div>
 					</div>
