--- a/src/app/role/role.component.html
+++ b/src/app/role/role.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-6">
+		<div class="col-xs-12">
 			<label class="control-label" for="select">Choose A Role</label>
 			<select class="form-control" id="select" (change)="onSelect($event)">
 				<option  *ngFor="let role of roles" value="{{role.ref}}">{{role.name}}</option>
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 	<div class="row" style="padding-top: 10px;">
-		<div class="col-sm-6">
+		<div class="col-xs-12">
 			<a class="btn btn-success btn-block" (click)="loadUsers()">Search</a>
 		</div>
 	</div>
@@ -40,17 +40,17 @@
 	</div>
 
 	<div class="row" style="padding-top: 40px;">
-		<div class="col-sm-6">
+		<div class="col-xs-12">
 			<div class="form-group">
 				<label class="control-label" for="focusedInput">{{selectedUser.firstName}} {{selectedUser.lastName}}</label>
-			  	<input class="form-control" id="focusedInput" type="password" placeholder="Password">
+			  	<input class="form-control" id="focusedInput" type="password" placeholder="Password" [(ngModel)]="password">
 			</div>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="col-sm-6">
-			<a class="btn btn-success btn-block">Login</a>
+		<div class="col-xs-12">
+			<a class="btn btn-success btn-block" (click)="attemptLogin()">Login</a>
 		</div>
 	</div>
     
