demo data, routing, and server

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -88,7 +88,7 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-12">
-						<button class="btn btn-success btn-lg btn-block" (click)="register()">Register</button>
+						<button class="btn btn-success btn-lg btn-block">Register</button>
 					</div>
 				</div>
 		</div>
