--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,9 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
   <ul class="nav navbar-nav">
   <li><a routerLink="signup" routerLinkActive="active">Register<span class="sr-only">(current)</span></a></li>
-  <li><a routerLink="orders" routerLinkActive="active">Place Order</a></li>
-  <li class="dropdown">
+  <li><a routerLink="role" routerLinkActive="active">Login</a></li>
+  <!-- <li><a routerLink="orders" routerLinkActive="active">Place Order</a></li> -->
+  <!-- <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
     <li><a routerLink="dashboard" routerLinkActive="active">Dashboard</a></li>
@@ -26,12 +27,12 @@
     <li class="divider"></li>
     <li><a href="#">One more separated link</a></li>
     </ul>
-  </li>
+  </li> -->
   </ul>
-  <ul class="nav navbar-nav navbar-right">
+  <!-- <ul class="nav navbar-nav navbar-right">
   <li><a routerLink="role" routerLinkActive="active">Role</a></li>
   <li><a routerLink="login" routerLinkActive="active">Login</a></li>
-  </ul>
+  </ul> -->
 </div>
 </div>
 </nav>
