--- a/src/app/role/role.component.html
+++ b/src/app/role/role.component.html
@@ -1,20 +1,30 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-xs-12 col-sm-6">
 			<label class="control-label" for="select">Choose A Role</label>
 			<select class="form-control" id="select" (change)="onSelect($event)">
 				<option  *ngFor="let role of roles" value="{{role.ref}}">{{role.name}}</option>
 			</select>
 		</div>
+		<div class="col-sm-6 hidden-xs">
+			<div class="form-group">
+				<label class="control-label" for="focusedInput">{{selectedUser.firstName}} {{selectedUser.lastName}}</label>
+			  	<input class="form-control" id="focusedInput" type="password" placeholder="Password" [(ngModel)]="password">
+			</div>
+		</div>
+		<div class="col-sm-4"></div>
 	</div>
 	<div class="row" style="padding-top: 10px;">
-		<div class="col-xs-12">
-			<a class="btn btn-success btn-block" (click)="loadUsers()">Search</a>
+		<div class="col-xs-12 col-sm-6">
+			<a class="btn btn-primary btn-block" (click)="tempLoadUsers()">Search</a>
+		</div>
+		<div class="col-sm-6 hidden-xs">
+			<button class="btn btn-success btn-block" [disabled]="!allowLogin" (click)="attemptLogin()">Login</button>
 		</div>
 	</div>
 
 	<div class="row" style="padding-top: 40px;">
-		<div class="col-sm-12">
+		<div class="col-xs-12">
 			<label class="control-label" for="userTable">Select User </label>
 			<div style="height: 300px; overflow: auto;">
 			<table class="table table-striped table-hover" id="userTable">
@@ -26,11 +36,11 @@
 				    </tr>
 				</thead>
 				<tbody>
-				    <tr *ngFor="let i = index; let member of members">
-				      	<td>{{member.lastName}}</td>
-				      	<td>{{member.firstName}}</td>
+				    <tr *ngFor="let i = index; let user of tempUsers">
+				      	<td>{{user.lastName}}</td>
+				      	<td>{{user.firstName}}</td>
 				      	<td>
-				      		<button class="btn btn-warning" (click)="selectMember(i)">Choose</button>
+				      		<button class="btn btn-warning" (click)="tempSelectUser(i)">Choose</button>
 				      	</td>
 				    </tr>
 				</tbody>
@@ -40,17 +50,17 @@
 	</div>
 
 	<div class="row" style="padding-top: 40px;">
-		<div class="col-xs-12">
+		<div class="col-xs-12 hidden-sm hidden-md hidden-lg">
 			<div class="form-group">
 				<label class="control-label" for="focusedInput">{{selectedUser.firstName}} {{selectedUser.lastName}}</label>
-			  	<input class="form-control" id="focusedInput" type="password" placeholder="Password" [(ngModel)]="password">
+			  	<input class="form-control" type="password" placeholder="Password" [(ngModel)]="password">
 			</div>
 		</div>
 	</div>
 
 	<div class="row">
-		<div class="col-xs-12">
-			<a class="btn btn-success btn-block" (click)="attemptLogin()">Login</a>
+		<div class="col-xs-12 hidden-sm hidden-md hidden-lg">
+			<button class="btn btn-success btn-block" [disabled]="!allowLogin" (click)="attemptLogin()">Login</button>
 		</div>
 	</div>
     
