--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
   <ul class="nav navbar-nav">
   <li><a routerLink="signup" routerLinkActive="active">Register<span class="sr-only">(current)</span></a></li>
-  <li><a routerLink="role" routerLinkActive="active">Login</a></li>
+  <li><a routerLink="invoice" routerLinkActive="active">Create Invoice</a></li>
   <!-- <li><a routerLink="orders" routerLinkActive="active">Place Order</a></li> -->
   <!-- <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
@@ -29,10 +29,10 @@
     </ul>
   </li> -->
   </ul>
-  <!-- <ul class="nav navbar-nav navbar-right">
-  <li><a routerLink="role" routerLinkActive="active">Role</a></li>
-  <li><a routerLink="login" routerLinkActive="active">Login</a></li>
-  </ul> -->
+  <ul class="nav navbar-nav navbar-right">
+  <!-- <li><a routerLink="role" routerLinkActive="active">Role</a></li> -->
+  <li><a routerLink="role" routerLinkActive="active">Login</a></li>
+  </ul>
 </div>
 </div>
 </nav>
