--- a/src/app/order-form/order-form.component.html
+++ b/src/app/order-form/order-form.component.html
@@ -1,137 +1,150 @@
 <div class="container-fluid">
 	<div class="panel panel-primary">
+
 		<div class="panel-heading">
 			<h3 class="panel-title">Create Order</h3>
 		</div>
 		<div class="panel-body">
 			<div class="row">
-				<div class="col-sm-12">
-					<ul class="nav nav-tabs">
-					  <li class="active"><a href="#buyer" data-toggle="tab" aria-expanded="true">Buyer</a></li>
-					  <li class=""><a href="#artist" data-toggle="tab" aria-expanded="false">Artist</a></li>
-					  <li class="dropdown">
-					    <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
-					      Options<span class="caret"></span>
-					    </a>
-					    <ul class="dropdown-menu">
-					      <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-					      <li class="divider"></li>
-					      <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
-					    </ul>
-					  </li>
-					</ul>
-					<div id="myTabContent" class="tab-content" style="padding-top: 20px;">
-					  	<div class="tab-pane fade active in" id="buyer">
-				  			<div class="form-group">
-							  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
-							</div>
-					  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
-						  <thead>
-						    <tr>
-						      <th>ID</th>
-						      <th>Name</th>
-						      <th>Email</th>
-						      <th>Options</th>
-						    </tr>
-						  </thead>
-						  <tbody>
-						    <tr>
-						      <td>4</td>
-						      <td>Column content</td>
-						      <td>Column content</td>
-						      <td><button class="btn btn-warning">Add</button></td>
-						    </tr>
-						  </tbody>
-						</table> 
-					  </div>
-					  <div class="tab-pane fade" id="artist">
-					  	<div class="form-group">
-							  <input class="form-control" type="text" id="inputDefault" placeholder="Search">
-							</div>
-					  	<table class="table table-striped table-hover" style="table-layout: fixed; height: 200px;">
-						  <thead>
-						    <tr>
-						      <th>ID</th>
-						      <th>Name</th>
-						      <th>Email</th>
-						      <th>Options</th>
-						    </tr>
-						  </thead>
-						  <tbody>
-						    <tr>
-						      <td>4</td>
-						      <td>Column content</td>
-						      <td>Column content</td>
-						      <td><button class="btn btn-warning">Add</button></td>
-						    </tr>
-						  </tbody>
-						</table> 
-					  </div>
-					  <div class="tab-pane fade" id="dropdown1">
-					   
-					  </div>
-					  <div class="tab-pane fade" id="dropdown2">
-					   
-					  </div>
-					</div>
-				</div>
+				<ul class="nav nav-tabs">
+				  	<li class="active"><a href="#user" data-toggle="tab">User Information</a></li>
+				  	<li><a href="#order" data-toggle="tab">Order Details</a></li>
+				  	<li [ngClass]="{disabled: true}"><a>Shipping</a></li>
+				</ul>
 			</div>
-			<div class="row">
-				<div class="col-sm-6" style="text-align: center;">
-					<div class="list-group">
-					  <div class="list-group-item">
-					    <h5 class="list-group-item-heading">Buyer</h5>
-					    <p class="list-group-item-text">ID: sd7f8979234</p>
-					  </div>
-					  <div class="btn-group btn-group-justified">
-						<a href="#" class="btn btn-success">Confirm</a>
-						<a href="#" class="btn btn-danger">Remove</a>
-					  </div>
-					</div>
-				</div>
-				<div class="col-sm-6" style="text-align: center;">
-					<div class="list-group">
-					  <div class="list-group-item">
-					    <h5 class="list-group-item-heading">Artist</h5>
-					    <p class="list-group-item-text">ID: sd7f8979234</p>
-					  </div>
-					  <div class="btn-group btn-group-justified">
-						<a href="#" class="btn btn-success">Confirm</a>
-						<a href="#" class="btn btn-danger">Remove</a>
-					  </div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+			<div id="myTabContent" class="tab-content">
 
-	<!-- <div class="panel panel-primary">
-		<div class="panel-heading">
-			<h3 class="panel-title">Ticket</h3>
-		</div>
-		<div class="panel-body">
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="list-group">
-					  <div class="list-group-item">
-					    <h5 class="list-group-item-heading">Order</h5>
-					    <h6 class="list-group-item-text">ID:</h6>
-					    <h6 class="list-group-item-text">Special Order:</h6>
-					  </div>
+			  	<div class="tab-pane fade active in" id="user">
+			    	<div class="row" style="padding-top: 30px;">
+						<div class="col-xs-3">
+							<select class="form-control" id="select" (change)="onSelect($event)">
+								<option  *ngFor="let role of roles" value="{{role.ref}}">{{role.name}}</option>
+							</select>
+						</div>
+						<div class="col-xs-3">
+							<button class="btn btn-primary btn-block">Search</button>
+						</div>
 					</div>
-				</div>
-				<div class="col-sm-6">
-					<div class="list-group">
-					  <div class="list-group-item">
-					    <h5 class="list-group-item-heading">Buyer</h5>
-					    <h6 class="list-group-item-text">ID:</h6>
-					    <h6 class="list-group-item-text">Address:</h6>
-					    <h6 class="list-group-item-text">Email:</h6>
-					    <h6 class="list-group-item-text">Cell:</h6>
-					  </div>
+					<div class="row" style="padding-top: 50px;">
+						<div class="col-xs-12">
+							<table class="table table-striped table-hover" style="table-layout: fixed; height: 250px;">
+							  <thead>
+							    <tr>
+							      <th>ID</th>
+							      <th>Name</th>
+							      <th>Email</th>
+							      <th>Options</th>
+							    </tr>
+							  </thead>
+							  <tbody>
+							    <tr>
+							      <td>4</td>
+							      <td>Column</td>
+							      <td>Column</td>
+							      <td><button class="btn btn-warning">Add</button></td>
+							    </tr>
+							  </tbody>
+							</table> 
+						</div>
 					</div>
+					<div class="row">
+						<div class="col-sm-4">
+							<div class="panel panel-primary">
+								<div class="panel-heading">Order Writer</div>
+								<div class="panel-body" *ngIf="hasWriter" style="text-align: center;">
+									<h5>{{writer.firstName}} {{writer.lastName}}</h5>
+									<p>ID: {{writer._id}}</p>
+									<button class="btn btn-danger btn-block">Remove</button>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="panel panel-primary">
+								<div class="panel-heading">Artist</div>
+								<div class="panel-body" *ngIf="hasArtist" style="text-align: center;">
+									<h5></h5>
+									<p>ID:</p>
+									<div class="btn-group btn-group-justified">
+										<a href="#" class="btn btn-success">Confirm</a>
+										<a href="#" class="btn btn-danger">Remove</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="panel panel-primary">
+								<div class="panel-heading">Buyer</div>
+								<div class="panel-body" *ngIf="hasBuyer" style="text-align: center;">
+									<h5></h5>
+									<p>ID:</p>
+									<div class="btn-group btn-group-justified">
+										<a href="#" class="btn btn-success">Confirm</a>
+										<a href="#" class="btn btn-danger">Remove</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+			  	</div>
+			  	<div class="tab-pane fade" id="order">
+			  		<div class="row">
+			  			<div class="col-xs-12">
+			  				<table class="table table-striped table-hover" style="table-layout: fixed; height: 250px;">
+							  <thead>
+							    <tr>
+							      <th>Field</th>
+							      <th>Value</th>
+							    </tr>
+							  </thead>
+							  <tbody>
+							    <tr>
+							      <td>Order ID</td>
+							      <td>123</td>
+							    </tr>
+							    <tr>
+							      <td>Artist ID</td>
+							      <td>123</td>
+							    </tr>
+							    <tr>
+							      <td>Buyer ID</td>
+							      <td>123</td>
+							    </tr>
+							    <tr>
+							      <td>Volunteer ID</td>
+							      <td>123</td>
+							    </tr>
+							  </tbody>
+							</table>
+							<div class="form-group">
+						      <label for="textArea" class="col-lg-2 control-label">Notes</label>
+						      <div class="col-lg-10">
+						        <textarea class="form-control" rows="3" id="textArea"></textarea>
+						        <!-- <span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span> -->
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <label class="col-lg-2 control-label">Special Order</label>
+						      <div class="col-lg-10">
+						        <div class="radio">
+						          <label>
+						            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+						            Yes
+						          </label>
+						        </div>
+						        <div class="radio">
+						          <label>
+						            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" checked="">
+						            No
+						          </label>
+						        </div>
+						      </div>
+						    </div> 
+			  			</div>
+			  		</div>
 				</div>
+
 			</div>
 		</div>
-	</div> -->
+
+	</div>
 </div>
